fixed a bit of styling - the root margin wasn't high enough on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html, body{
   font-weight: 400;
 }
 #root{
-  margin-top: -21px;
+  margin-top: -22px;
 }
 
 body a {
